# voice-sentiment-classification

./: .gitignore  01_preprocess.py  02_train.py  03_test.py  audio_to_hf.ipynb  dataset.py  descriptives.ipynb  detect_empty_audios.ipynb  organize_data.ipynb  prepare_dataset.ipynb  prepare_ratings.ipynb  pyproject.toml  training.sh
assignment/: voice_aggression_regression.ipynb
models/: WhisPAr.py
ratings/: aggression_binary_ratings.csv  aggression_ratings.csv  annoyance_binary_ratings.csv  annoyance_ratings.csv  frustration_binary_ratings.csv  frustration_ratings.csv
